[package]
name = "drydoc-ipc"
version = "0.1.0"
authors = ["Braden McDorman <bmcdorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drydoc-model = { path = "../drydoc-model" }
tokio = { version = "1.0", features = [ "full" ] }
