[package]
name = "drydoc-gen"
version = "0.1.0"
authors = ["Semio"]
edition = "2018"
license = "BSD-3-Clause"
license-file = "../LICENSE"


[dependencies]
toml = "0.5.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
handlebars = "3.5.1"
tokio = { version = "1.0", features = [ "full" ] }
async-trait = "0.1.42"
reqwest = "0.10"
url = "2.2.0"
serde_yaml = "0.8"
clang = { version = "1.0.3", features = [ "clang_10_0" ] }
lazy_static = "1.4"
regex = "1.4.2"
colored = "2"
log = "0.4.11"
derive_more = "*"
once_cell = "1.5.2"
memmap = "0.7"
lalrpop-util = "0.19.4"
bytes = "1.0.1"
drydoc-ipc = { path = "../drydoc-ipc" }
drydoc-model = { path = "../drydoc-model" }

[build-dependencies]
lalrpop = "0.19.4"