[package]
name = "drydoc-pkg-manager"
version = "0.1.0"
authors = ["Braden McDorman <bmcdorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
async-trait = "0.1.42"
reqwest = "0.11.0"
semver = "0.11.0"
derive_more = "*"
tar = "0.4.3"
compress = "0.2.1"
sha2 = "0.9.2"
hex = "0.4.2"
serde_with = "1.6.0"
log = "0.4.13"
