[package]
name = "drydoc-pkg"
version = "0.1.0"
authors = ["Braden McDorman <bmcdorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.0", features = [ "full" ] }
dirs = "3.0.1"
drydoc-pkg-manager = { path = "../drydoc-pkg-manager" }
pretty_env_logger = "0.4"
semver = "0.11.0"
log = "0.4.13"